# KestrelEngine

./: .gitignore  .gitmodules  CMakeLists.txt  CONTRIBUTING.md  KestrelTests.cmake  LICENSE  README.md
sdk/extra/tree-sitter-kdl/: CMakeLists.txt  grammar.js
sdk/extra/tree-sitter/tree-sitter-ksl/: CMakeLists.txt  Cargo.toml  binding.gyp  grammar.js  package.json
sdk/extra/tree-sitter/tree-sitter-ksl/src/: grammar.json  node-types.json
sdk/libs/libKDL/: CMakeLists.txt
sdk/libs/libKDL/assembler/: encoder.cpp  encoder.hpp
sdk/libs/libKDL/codegen/kdl/: file.cpp  file.hpp
sdk/libs/libKDL/codegen/lua/: ast.cpp  ast.hpp  exporter.cpp  exporter.hpp  kestrel_api.cpp  kestrel_api.hpp
sdk/libs/libKDL/diagnostic/: diagnostic.cpp  diagnostic.hpp
sdk/libs/libKDL/exception/: duplicate_type_definition_exception.hpp  expression_runtime_exception.hpp  incompatible_conversion_exception.hpp  incorrect_arguments_exception.hpp  invalid_attribute_exception.hpp  lua_exception.hpp  module_exception.hpp  resource_already_exists_exception.hpp  type_mismatch_exception.hpp  unexpected_lexeme_exception.hpp  unexpected_token_exception.hpp  unknown_binary_conversion_format_exception.hpp  unknown_field_exception.hpp  unknown_value_exception.hpp  unrecognised_binary_template_field_exception.hpp  unrecognised_function_exception.hpp  unrecognised_module_definition_exception.hpp  unrecognised_module_format_exception.hpp  unrecognised_type_definition_exception.hpp  unrecognised_variable_exception.hpp
sdk/libs/libKDL/modules/kdl/: kdl.cpp  kdl.hpp
sdk/libs/libKDL/modules/kestrel/: kestrel.cpp  kestrel.hpp
sdk/libs/libKDL/modules/macintosh/: macintosh.cpp  macintosh.hpp
sdk/libs/libKDL/modules/module/: module_definition.cpp  module_definition.hpp
sdk/libs/libKDL/modules/spriteworld/: spriteworld.cpp  spriteworld.hpp
sdk/libs/libKDL/project/: project.cpp  project.hpp
sdk/libs/libKDL/sema/: analyser.cpp  analyser.hpp  context.cpp  context.hpp
sdk/libs/libKDL/sema/command/: encoder.cpp  encoder.hpp
sdk/libs/libKDL/sema/components/: component.cpp  component.hpp
sdk/libs/libKDL/sema/declaration/: field_declaration.cpp  field_declaration.hpp  resource_declaration.cpp  resource_declaration.hpp
sdk/libs/libKDL/sema/decorator/: decorator.cpp  decorator.hpp
sdk/libs/libKDL/sema/directive/: directive.cpp  directive.hpp  format.cpp  format.hpp  function.cpp  function.hpp  metadata.cpp  metadata.hpp  out.cpp  out.hpp  variable.cpp  variable.hpp
sdk/libs/libKDL/sema/documentation/: documentation.cpp  documentation.hpp
sdk/libs/libKDL/sema/expectation/: expectation.cpp  expectation.hpp
sdk/libs/libKDL/sema/module/: module.cpp  module.hpp
sdk/libs/libKDL/sema/scene/: interface.cpp  interface.hpp  scene.cpp  scene.hpp
sdk/libs/libKDL/sema/script/: script.cpp  script.hpp
sdk/libs/libKDL/sema/type/: descriptor.cpp  descriptor.hpp  (+2 more)
sdk/libs/libKDL/spec/: binary_types.hpp  decorators.hpp  directives.hpp  keywords.hpp  types.hpp
sdk/libs/libKDL/tokenizer/: token.hpp  token_type.hpp  tokenizer.cpp  tokenizer.hpp
sdk/libs/libKDL/unit/: file.cpp  file.hpp
sdk/libs/libKestrel/: CMakeLists.txt  configuration.cpp  configuration.hpp  kestrel.cpp  kestrel.hpp  platform.hpp  version.hpp
sdk/libs/libKestrel/cache/: cache.cpp  cache.hpp
sdk/libs/libKestrel/clock/: clock.cpp  clock.hpp  timed_event.cpp  timed_event.hpp
sdk/libs/libKestrel/command/: argument.cpp  argument.hpp  container.hpp  node.cpp  node.hpp  program.cpp  program.hpp  property.cpp  property.hpp
sdk/libs/libKestrel/device/: console.cpp  console.hpp
sdk/libs/libKestrel/entity/: entity.cpp  entity.hpp
sdk/libs/libKestrel/event/: event.cpp  event.hpp  event_type.hpp  key.hpp  text_entry.cpp  text_entry.hpp
sdk/libs/libKestrel/exceptions/: bad_data_file_exception.hpp  invalid_scene_exception.hpp  mod_exception.hpp
sdk/libs/libKestrel/font/: font.cpp  font.hpp  manager.hpp  typesetter.cpp  typesetter.hpp
sdk/libs/libKestrel/lua/: script.cpp  script.hpp  scripting.hpp
sdk/libs/libKestrel/math/: SIMD.hpp  angle.cpp  angle.hpp  angular_difference.cpp  angular_difference.hpp  line.cpp  line.hpp  point.cpp  point.hpp  polygon.cpp  polygon.hpp  rect.cpp  rect.hpp  size.cpp  size.hpp  triangle.cpp  triangle.hpp  triangulated_polygon.cpp  triangulated_polygon.hpp  vec2.cpp  vec2.hpp  vec3.cpp  vec3.hpp  vec4.cpp  vec4.hpp
sdk/libs/libKestrel/memory/: slab.hpp
sdk/libs/libKestrel/physics/: body.cpp  body.hpp  collisions.cpp  hitbox.cpp  lod.hpp  quad_tree.hpp  tree.hpp  world.cpp  world.hpp
sdk/libs/libKestrel/resource/: collection.cpp  collection.hpp  container.cpp  container.hpp  descriptor.cpp  descriptor.hpp  key.cpp  key.hpp  macro.hpp  reader.cpp  reader.hpp  writer.cpp  writer.hpp
sdk/libs/libKestrel/session/: session.cpp  session.hpp
sdk/libs/libKestrel/shared/: library.hpp  shared_library_manager.cpp  shared_library_manager.hpp
sdk/libs/libKestrel/sound/: audio_manager.cpp
sdk/libs/libKestrel/task/: async_queue.cpp  async_queue.hpp
sdk/libs/libKestrel/ui/: alignment.hpp
sdk/libs/libKestrel/util/: uid.cpp  uid.hpp
sdk/libs/libLinux/: CMakeLists.txt
sdk/libs/libLinux/font/: config.cpp  config.hpp
sdk/libs/libOpenGLRenderer/: CMakeLists.txt  opengl.hpp
sdk/libs/libOpenGLRenderer/driver/: context.cpp  context.hpp  driver.cpp  driver.hpp  event_handler.cpp  event_handler.hpp  frame_generator.cpp  frame_generator.hpp  output.cpp  output.hpp
sdk/libs/libOpenGLRenderer/render/: framebuffer.cpp  framebuffer.hpp  render_operation.cpp  render_operation.hpp  vertex_buffer.cpp  vertex_buffer.hpp
sdk/libs/libOpenGLRenderer/resource/: texture.hpp
sdk/libs/libResource/: CMakeLists.txt  reference.cpp  reference.hpp
sdk/libs/libResource/declaration/: instance.cpp  instance.hpp  value.cpp  value.hpp
sdk/libs/libResource/decorator/: decoratable.cpp  decoratable.hpp  decorator.cpp  decorator.hpp
tools/luatool/: CMakeLists.txt
tools/luatool/src/: luatool.cpp
tools/luatool/src/analyzer/: clang.hpp  string_helpers.hpp  translation_unit_context.hpp
tools/luatool/src/lua/: project.cpp
(+5112 files in other folders)
